--- a/Web/WebAppDemo.Web/Views/Shared/_Layout.cshtml
+++ b/Web/WebAppDemo.Web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=9">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SQL Server HA Application Demo</title>
+    <title>CRUD ASP.NET MVC & ng Demo</title>
     @Styles.Render("~/Content/css")
 
 </head>
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">SQL Server HA Application Demo</a>
+                <a class="navbar-brand" href="#">CRUD ASP.NET MVC & ng Demo</a>
             </div>
         </div>
     </div>
