--- a/Web/WebAppDemo.Web/Views/Shared/_Layout.cshtml
+++ b/Web/WebAppDemo.Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">CRUD ASP.NET MVC & ng Demo</a>
+                <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
+                    <img style="max-width:100px; margin-top: -7px;"
+                         src="~/Content/study4.png">
+                </a>
             </div>
         </div>
     </div>
